# runelite

./: .cursorignore  .gitignore  AGENTS.md  BRANCH_GUIDE.md  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  config.toml  hot-reload-plugin.sh  menu_action.txt  mouse_click_script.txt  pom.xml  process_args.py  pyproject.toml  requirements.txt  rlbot-config.json  run_runelite.sh
rlbot/: .gitignore  README.md  README_IMITATION.md  agent.py  auto_fixup.sh  cleanup_summary.md  command_schema.json  main.py  pyproject.toml  requirements.txt  runescape_env.py  state_schema.json  train.py  train2.py  train3.py  train_imitation.py
rlbot-ipc/: action.json  (+2 more)
rlbot/logs/: train.monitor.csv
rlbot/logs/combat_bot_20250221_122811/tensorboard/combat_training_1/: events.out.tfevents.1740169694.Daniels-MacBook-Pro.local.61432.0
rlbot/logs/combat_bot_20250221_124642/tensorboard/combat_training_1/: events.out.tfevents.1740170805.Daniels-MacBook-Pro.local.73311.0
rlbot/logs/combat_bot_20250221_125058/tensorboard/combat_training_1/: events.out.tfevents.1740171065.Daniels-MacBook-Pro.local.76160.0
rlbot/logs/combat_bot_20250221_125415/tensorboard/combat_training_1/: events.out.tfevents.1740171256.Daniels-MacBook-Pro.local.78381.0
rlbot/logs/combat_bot_20250221_140845/: vec_normalize.pkl
rlbot/logs/combat_bot_20250221_141957/: vec_normalize.pkl
rlbot/logs/combat_bot_20250221_145229/: vec_normalize.pkl
rlbot/models/: wc_policy.npz
rlbot/src/: __init__.py  environment.py  extractors.py  logging_utils.py  models.py  training.py  websocket_client.py
(+113 files in other folders)
