[tool.poetry]
name = "rlbot"
version = "0.1.0"
description = "A RuneScape bot using OpenAI's Agents SDK"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pyautogui = "^0.9.54"
pydantic = "^2.5.2"
openai-agents = "^0.0.6"
openai = "^1.66.0"
types-requests = "^2.31.0.10"
types-pyautogui = "^0.9.3"
pyobjc-framework-Quartz = "^10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 